--- a/HangMan/Hangman-frontend/index.html
+++ b/HangMan/Hangman-frontend/index.html
@@ -15,5 +15,5 @@
   <body>
     <div id="app"></div>
   </body>
-  <script src="http://127.0.0.1:5500/dist/main.js"></script>
+  <!-- <script src="http://127.0.0.1:5500/dist/main.js"></script> -->
 </html>
